--- a/include/header.html
+++ b/include/header.html
@@ -16,13 +16,13 @@
 				<a href="<!--#echo var="wc1"-->question/list.html"><i class="i_qlist"></i>进入题库</a>
 			</div>
 			<div class="panel">
-				<a href="<!--#echo var="wc1"-->user/car.html"><i class="i_car"></i>查看购物车</a>
+				<a href="<!--#echo var="wc1"-->user/car.html"><i class="i_car"></i>查看购物车({{user.info.carcount}})</a>
 				<a href="<!--#echo var="wc1"-->user/order.html"><i class="i_order"></i>我的订单</a>
 				<a href="<!--#echo var="wc1"-->user/class.html"><i class="i_book"></i>我的课程</a>
 				<a href="<!--#echo var="wc1"-->class/list.html"><i class="i_video"></i>选购课程</a>
 			</div>
 			<div class="panel">
-				<a href="<!--#echo var="wc1"-->user/news.html"><i class="i_news"></i>消息</a>
+				<a href="<!--#echo var="wc1"-->user/news.html"><i class="i_news"></i>消息({{user.unread}})</a>
 				<a ng-click="user.selectM()"><i class="i_major"></i>考试科目</a>
 				<a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.sjz.hsh.examquestionbanks"><i class="i_download"></i>下载做题宝APP</a>
 			</div>
@@ -35,11 +35,11 @@
 		</div>
 		<div class="panel" ng-show="!user.sm">
 			<p class="red">请选择您要学习的科目</p>
-			<label class="b_btn" ng-repeat="c in user.clist" ng-click="user.chooseC(c.id,c.course_name)" ng-class="{'blue':user.info.cid==c.id}">{{c.course_name}}</label>
+			<label class="b_btn" ng-repeat="c in user.clist" ng-click="user.chooseC(c.id,c.course_name)" ng-class="{'bg_blue':user.info.cid==c.id}">{{c.course_name}}</label>
 		</div>
 		<div class="panel" ng-show="user.sm">
 			<p class="red">请选择您要学习的专业</p>
-			<label class="b_btn" ng-repeat="m in user.mlist" ng-click="user.chooseM(m.id,m.major_name)" ng-class="{'blue':user.info.mid==m.id}">{{m.major_name}}</label>
+			<label class="b_btn" ng-repeat="m in user.mlist" ng-click="user.chooseM(m.id,m.major_name)" ng-class="{'bg_blue':user.info.mid==m.id}">{{m.major_name}}</label>
 		</div>
 	</div>
 </header>
